Swagger doc for route update film finished
